# Simulate-attacks

./: .dockerignore  .gitignore  README.md  blueprint.txt  docker-compose.yml  pyproject.toml
agent/: attack_path_analyzer.py  attack_scenarios.py  config.py  flow.py  llm.py  mcp_integration.py  models.py  scenario_templates.py  simulation_engine.py  state.py  tools.py
agent/backend/: Dockerfile  Dockerfile.minimal
agent/caldera/: __init__.py  client.py  config.py  exceptions.py  health.py
agent/nodes/: cypher.py  graph_tools.py  intent_classifier.py  respond.py  result_ingest.py  router.py  scenario_planner.py
agent/prompts/: system.md
agent/tests/: test_graph_confirmation.py
frontend/: Dockerfile  agents.md  next-env.d.ts  next.config.js  package.json  tsconfig.json
frontend-vite/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-vite/src/: App.tsx  index.css
frontend/components/: ChatPanel.tsx  ConnectionIndicator.tsx  CypherQueryBar.tsx  DynamicGraphCanvas.tsx  DynamicInteractiveGraphCanvas.tsx  ErrorBoundary.tsx  GraphCanvas.tsx  GraphUploader.tsx  InteractiveGraphCanvas.tsx  LoadingStates.tsx  OptimizedLogPanel.tsx  ScenarioControls.tsx  SimulationMonitor.tsx  SimulationPanel.tsx
frontend/hooks/: useAppState.ts  useWebSocketWithRetry.ts
frontend/lib/: api.ts  error-recovery.ts  streaming.ts
frontend/pages/: _app.tsx  index-original.tsx.bak  index.tsx
frontend/public/: sample-graph.json
frontend/styles/: globals.css
frontend/types/: app-state.ts  events.ts
(+47 files in other folders)
